Nav links fixed and not fall outside parent element on small screen

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -9,9 +9,7 @@
   }
 
   &__item {
-    display: flex;
     margin-right: 20px;
-    line-height: 60px;
     font-weight: 500;
     list-style: none;
 
@@ -21,6 +19,9 @@
   }
 
   &__link {
+    display: flex;
+    align-items: center;
+    height: 60px;
     color: #000;
     text-decoration: none;
     text-transform: uppercase;
